ligolang/src/test/contracts/negative/bad_annotation_unpack.mligo
let x = (Bytes.unpack (Bytes.pack "hello") : string)
